--- a/src/patternfly/components/Button/button.scss
+++ b/src/patternfly/components/Button/button.scss
@@ -2,7 +2,7 @@
 
 :where(:root, .#{$button}) {
   --#{$button}--Display: inline-flex;
-  --#{$button}--AlignItems: baseline;
+  --#{$button}--AlignItems: start;
   --#{$button}--JustifyContent: center;
   --#{$button}--Gap: var(--pf-t--global--spacer--gap--text-to-element--default);
   --#{$button}--PaddingBlockStart: var(--pf-t--global--spacer--control--vertical--default);
@@ -568,7 +568,7 @@
       min-width: var(--#{$button}--m-plain--m-no-padding--MinWidth);
     }
 
-    min-width: var(--#{$button}--m-plain--MinWidth);
+    min-width: calc(var(--#{$button}--FontSize) * var(--#{$button}--LineHeight) + var(--#{$button}--PaddingBlockStart) + var(--#{$button}--PaddingBlockEnd));
   }
 
   &.pf-m-block {
